# audio_transcription_deepspeech

./: .gitignore  README.md
deepspeech_transcript/: pyproject.toml
deepspeech_transcript/csv_docs/: paths.csv  paths2.csv  transcripted_audios.csv  transcripted_audios1.csv
deepspeech_transcript/deepspeech_transcript/: main_audio_transcript.py  main_audio_transcript_2.py  main_audio_transcript_poo.py  path.py  poo_example.py  preprocessing.py  preprocessing2.py  preprocessing_poo.py
deepspeech_transcript/deepspeech_transcript/functional_programming_paradigm/: main_audio_transcript.py  preprocessing.py
deepspeech_transcript/deepspeech_transcript/oop_paradigm/: main_audio_transcript_poo.py  preprocessing_poo.py
deepspeech_transcript/tests/: test_deepspeech_transcript.py
